src/test/deca/context/valid/sans_objet/noOp_cont_01.deca
// Description:
//    Programme minimaliste testant NoOperation
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

{

        ;

}
