src/test/deca/context/invalid/sans_objet/type_void.deca
// Description:
//     Declaration avec type void.
//
// Resultats:
//    Ligne 11: type void forbidden
//
// Historique:
//    cree le 01/01/2023

{
   void x;
}
